--- a/src/main/resources/templates/authorization/index.html
+++ b/src/main/resources/templates/authorization/index.html
@@ -15,7 +15,7 @@
         window.location.href = 'http://localhost:1000/login';
     }
     function register() {
-        window.location.href = 'http://localhost:1000/api/new/user';
+        window.location.href = 'http://localhost:1000/new/user';
     }
 </script>
 </body>
