--- a/src/main/resources/templates/account/main.html
+++ b/src/main/resources/templates/account/main.html
@@ -6,23 +6,28 @@
 </head>
 <body>
 <h1>Web Marketplace</h1>
-<button onclick="newGoods()">Add some goods</button>
-<br/>
-<br/>
+
+
 <button onclick="getUser()">User info</button>
 <br/>
 <br/>
-<button onclick="goods()">Your goods</button>
+<button onclick="goods()">Goods</button>
+<br/>
+<br/>
+<button onclick="logOut()">Log out</button>
 <script>
-    function newGoods() {
-        window.location.href = 'http://localhost:1000/api/new/goods';
+    function logOut(){
+        window.location.href = 'http://localhost:1000/';
     }
+
     function getUser() {
-        window.location.href = 'http://localhost:1000/api/get/user';
+        window.location.href = 'http://localhost:1000/get/user';
     }
     function goods() {
-        window.location.href = 'http://localhost:1000/api/your/goods';
+        window.location.href = 'http://localhost:1000/goods';
     }
+
+
 </script>
 
 </body>
