--- a/src/main/resources/templates/account/userInfo.html
+++ b/src/main/resources/templates/account/userInfo.html
@@ -25,7 +25,7 @@
 <button onclick="back()">Back</button>
 <script>
     function back() {
-        window.location.href = 'http://localhost:1000/api/main';
+        window.location.href = 'http://localhost:1000/main';
     }
 </script>
 </body>
