--- a/src/main/resources/templates/account/changePassword/changePassword.html
+++ b/src/main/resources/templates/account/changePassword/changePassword.html
@@ -14,10 +14,12 @@
     <div style="color: brown" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</div>
 
     <br/>
+    <br/>
     <label for="password">New password: </label>
     <input type="text" th:field="*{password}" id="password"/>
     <div style="color: brown" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error</div>
 
+    <br/>
     <br/>
     <label for="confirmPassword">Confirm new password: </label>
     <input type="text" th:field="*{confirmPassword}" id="confirmPassword"/>
@@ -34,7 +36,7 @@
 <button onclick="back()">Back</button>
 <script>
     function back() {
-        window.location.href = 'http://localhost:1000/get/check/code';
+        window.location.href = 'https://localhost:1000/get/check/code';
     }
 </script>
 </body>
