--- a/src/main/resources/templates/account/changePassword/codeForm.html
+++ b/src/main/resources/templates/account/changePassword/codeForm.html
@@ -23,7 +23,7 @@
 <button onclick="back()">Back</button>
 <script>
     function back() {
-        window.location.href = 'http://localhost:1000/get/send/code';
+        window.location.href = 'https://localhost:1000/get/send/code';
     }
 </script>
 </body>
