--- a/src/main/resources/templates/authorization/index.html
+++ b/src/main/resources/templates/authorization/index.html
@@ -12,10 +12,10 @@
 <button onclick="register()">Sing up</button>
 <script>
     function login() {
-        window.location.href = 'http://localhost:1000/login';
+        window.location.href = 'https://localhost:1000/login';
     }
     function register() {
-        window.location.href = 'http://localhost:1000/new/user';
+        window.location.href = 'https://localhost:1000/new/user';
     }
 </script>
 </body>
