--- a/src/main/resources/templates/authorization/loginForm.html
+++ b/src/main/resources/templates/authorization/loginForm.html
@@ -30,10 +30,10 @@
 <button onclick="back()">Back</button>
 <script>
     function changePass() {
-        window.location.href = 'http://localhost:1000/get/send/code';
+        window.location.href = 'https://localhost:1000/get/send/code';
     }
     function back() {
-        window.location.href = 'http://localhost:1000/';
+        window.location.href = 'https://localhost:1000/';
     }
 </script>
 </body>
