--- a/src/main/resources/templates/authorization/register.html
+++ b/src/main/resources/templates/authorization/register.html
@@ -40,7 +40,7 @@
 <button onclick="back()">Back</button>
 <script>
     function back() {
-        window.location.href = 'http://localhost:1000/';
+        window.location.href = 'https://localhost:1000/';
     }
 </script>
 </body>
