--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 
 
 
-<button onclick="yourGoods()">Your goods</button>
+<button onclick="yourAccount()">Your account</button>
 <br/>
 <br/>
 <button onclick="getUser()">Find seller</button>
@@ -30,8 +30,8 @@
     function goods() {
         window.location.href = 'https://localhost:1000/goods';
     }
-    function yourGoods() {
-        window.location.href = 'https://localhost:1000/your/goods';
+    function yourAccount() {
+        window.location.href = 'https://localhost:1000/get/account';
     }
 
 
