--- a/src/main/resources/templates/account/changePassword/emailFormForChangePass.html
+++ b/src/main/resources/templates/account/changePassword/emailFormForChangePass.html
@@ -20,7 +20,7 @@
 <button onclick="back()">Back</button>
 <script>
     function back() {
-        window.location.href = 'http://localhost:1000/login';
+        window.location.href = 'https://localhost:1000/login';
     }
 </script>
 </body>
