--- a/src/main/resources/templates/account/findSeller/emailFormForFindUser.html
+++ b/src/main/resources/templates/account/findSeller/emailFormForFindUser.html
@@ -2,25 +2,25 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Info Seller</title>
+    <title>Seller</title>
 </head>
 <body>
 <h1>Web Marketplace</h1>
-<form th:method="POST" th:action="@{/info/user}" th:object="${emailForm}">
+<form th:method="POST" th:action="@{/find/user}" th:object="${emailForm}">
     <br/>
-    <label for="email">Enter email of user: </label>
+    <label for="email">Enter email of seller: </label>
     <input type="text" th:field="*{email}" id="email"/>
     <div style="color: brown" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</div>
     <div th:if="${error}" style="color:brown" th:text="${error}">Error</div>
     <br/>
     <br/>
-    <input type="submit" value="Find user"/>
+    <input type="submit" value="Find seller"/>
 </form>
 <br/>
 <button onclick="back()">Back</button>
 <script>
     function back() {
-        window.location.href = 'http://localhost:1000/main';
+        window.location.href = 'https://localhost:1000/main';
     }
 </script>
 </body>
