--- a/src/main/resources/templates/account/findSeller/userInfo.html
+++ b/src/main/resources/templates/account/findSeller/userInfo.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Account</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Goods</h1>
+<h1>Seller info</h1>
+<div th:each="user : ${user}">
 
 
+    <label for="name">Name: </label>
+    <a th:text="${user.getFullName()}" id="name">User</a>
 
+    <br/>
+    <label for="email">Email: </label>
+    <a th:text="${user.getEmail()}" id="email">User</a>
 
-<button onclick="goods()">Filter goods</button>
+    <br/>
+    <label for="phone">Phone: </label>
+    <a th:text="${user.getPhone()}" id="phone">User</a>
 
-<!--<button onclick="sortDecrease()">Price decrease</button>-->
-
-
-
-
+</div>
+<br/>
+<br/>
+<h2>All goods</h2>
 <div th:each="goods : ${goods}">
 
     <br/>
-    <label for="name">Goods: </label>
-    <a th:text="${goods.getName()}" id="name">Goods</a>
+    <label for="nameGoods">Goods: </label>
+    <a th:text="${goods.getName()}" id="nameGoods">Goods</a>
 
     <br/>
     <label for="description">Description: </label>
@@ -35,22 +42,12 @@
     <label for="data">Data: </label>
     <a th:text="${goods.getLocalDate()}" id="data">Goods</a>
 
-    <br/>
-    <label for="email">Seller email:     </label>
-    <a th:text="${goods.getUserEmail()}" id="email">Goods</a>
+
 
 </div>
 <br/>
-<br/>
 <button onclick="back()">Back</button>
 <script>
-
-    function sortDecrease() {
-        window.location.href = 'https://localhost:1000/get/sortGoods/decrease';
-    }
-    function goods() {
-        window.location.href = 'https://localhost:1000/find/goods';
-    }
     function back() {
         window.location.href = 'https://localhost:1000/main';
     }
