--- a/src/main/resources/templates/goods/deleteGoods.html
+++ b/src/main/resources/templates/goods/deleteGoods.html
@@ -9,7 +9,7 @@
 <form th:method="POST" th:action="@{/delete/goods}" th:object="${idGoods}">
     <label for="idGoods">Enter id of goods: </label>
     <input type="number" th:field="*{idGoods}" id="idGoods"/>
-
+    <div th:if="${error}" style="color:brown" th:text="${error}">Error</div>
     <br/>
     <br/>
     <input type="submit" value="Delete goods!"/>
