--- a/src/main/resources/templates/account/changePassword/codeForm.html
+++ b/src/main/resources/templates/account/changePassword/codeForm.html
@@ -3,28 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Change password</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+        }
+
+        label {
+            font-weight: bold;
+            display: block;
+            margin: 10px 0;
+            text-align: right;
+            width: 200px;
+            display: inline-block;
+        }
+
+        input[type="text"] {
+            width: 200px;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            font-size: 16px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin-top: 10px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+
+        .error {
+            color: brown;
+        }
+    </style>
 </head>
 <body>
 <h1>Change password</h1>
 <form th:method="POST" th:action="@{/check/code}" th:object="${code}">
-
-        <br/>
-        <label for="code">Enter code that was sent to your email: </label>
+    <div>
+        <label for="code">Enter code from email:</label>
         <input type="text" th:field="*{code}" id="code"/>
-
-
-        <div th:if="${error}" style="color:brown" th:text="${error}">Error</div>
-        <br/>
-        <br/>
-        <input type="submit" value="Next"/>
-
+    </div>
+    <div th:if="${error}" class="error" th:text="${error}"></div>
+    <input type="submit" value="Next"/>
 </form>
-<br/>
-<button onclick="back()">Back</button>
-<script>
-    function back() {
-        window.location.href = 'https://localhost:1000/get/send/code';
-    }
-</script>
 </body>
 </html>
