--- a/src/main/resources/templates/account/changePassword/emailFormForChangePass.html
+++ b/src/main/resources/templates/account/changePassword/emailFormForChangePass.html
@@ -3,6 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Info Seller</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+        }
+
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-weight: bold;
+            width: 150px;
+            text-align: right;
+            margin: 10px 10px 10px 0;
+        }
+
+        input[type="text"] {
+            width: 200px;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        input[type="number"] {
+            width: 100px;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"],
+        button {
+            font-size: 16px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        input[type="submit"]:hover,
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .error {
+            color: brown;
+        }
+
+    </style>
 </head>
 <body>
 <h1>Change password</h1>
@@ -17,11 +78,11 @@
     <input type="submit" value="Next"/>
 </form>
 <br/>
-<button onclick="back()">Back</button>
-<script>
-    function back() {
-        window.location.href = 'https://localhost:1000/login';
-    }
-</script>
+<!--<button onclick="back()">Back</button>-->
+<!--<script>-->
+<!--    function back() {-->
+<!--        window.location.href = 'https://localhost:1000/login';-->
+<!--    }-->
+<!--</script>-->
 </body>
 </html>
