--- a/src/main/resources/templates/account/findSeller/emailFormForFindUser.html
+++ b/src/main/resources/templates/account/findSeller/emailFormForFindUser.html
@@ -3,25 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Seller</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+        }
+
+        label {
+            font-weight: bold;
+            display: inline-block;
+            width: 150px;
+            vertical-align: top;
+        }
+
+        input[type="text"] {
+            width: 200px;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            font-size: 16px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin-top: 10px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+
+        .error {
+            color: brown;
+        }
+    </style>
 </head>
 <body>
 <h1>Web Marketplace</h1>
 <form th:method="POST" th:action="@{/find/user}" th:object="${emailForm}">
-    <br/>
-    <label for="email">Enter email of seller: </label>
+    <label for="email">Enter email of seller:</label>
     <input type="text" th:field="*{email}" id="email"/>
     <div style="color: brown" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</div>
-    <div th:if="${error}" style="color:brown" th:text="${error}">Error</div>
-    <br/>
+    <div th:if="${error}" class="error" th:text="${error}"></div>
     <br/>
     <input type="submit" value="Find seller"/>
 </form>
 <br/>
-<button onclick="back()">Back</button>
-<script>
-    function back() {
-        window.location.href = 'https://localhost:1000/main';
-    }
-</script>
+
 </body>
 </html>
+
