--- a/src/main/resources/templates/account/yourAccount.html
+++ b/src/main/resources/templates/account/yourAccount.html
@@ -3,51 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>Account</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+        }
+
+        label, a {
+            font-weight: bold;
+        }
+
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        button {
+            font-size: 16px;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-
-
 <h1>Info</h1>
 
-
-
 <div th:each="user : ${user}">
-
-
-    <label for="name">Your name: </label>
-    <a th:text="${user.getFullName()}" id="name">User</a>
-
+    <label for="name">Your name:</label>
+    <a th:text="${user.getFullName()}" id="name"></a>
     <br/>
-    <label for="email">Your email: </label>
-    <a th:text="${user.getEmail()}" id="email">User</a>
 
+    <label for="email">Your email:</label>
+    <a th:text="${user.getEmail()}" id="email"></a>
     <br/>
-    <label for="phone">Your phone num: </label>
-    <a th:text="${user.getPhone()}" id="phone">User</a>
 
+    <label for="phone">Your phone num:</label>
+    <a th:text="${user.getPhone()}" id="phone"></a>
+    <br/>
 </div>
-<br/>
-<br/>
+
 <button onclick="accountSettings()">Account settings</button>
 <br/>
-<br/>
-
 <button onclick="yourGoods()">Your goods</button>
-<br/>
-<br/>
-<button onclick="back()">Back</button>
+
 <script>
-    function back() {
-        window.location.href = 'https://localhost:1000/goods';
-    }
     function yourGoods() {
         window.location.href = 'https://localhost:1000/your/goods';
     }
+
     function accountSettings() {
-        // window.location.href = 'https://localhost:1000/get/send/code';
+        // Add functionality for account settings here
     }
-
-
 </script>
 </body>
 </html>
