--- a/src/main/resources/templates/authorization/index.html
+++ b/src/main/resources/templates/authorization/index.html
@@ -3,17 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+        }
+
+        button {
+            font-size: 16px;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 <h1>Web Marketplace</h1>
 <button onclick="login()">Sign in</button>
 <br/>
-<br/>
-<button onclick="register()">Sing up</button>
+<button onclick="register()">Sign up</button>
+
 <script>
     function login() {
         window.location.href = 'https://localhost:1000/login';
     }
+
     function register() {
         window.location.href = 'https://localhost:1000/new/user';
     }
