--- a/src/main/resources/templates/authorization/loginForm.html
+++ b/src/main/resources/templates/authorization/loginForm.html
@@ -3,6 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <style>
+        h1 {
+            font-size: 36px;
+            color: #333;
+            text-align: center;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        div {
+            margin-bottom: 10px;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        input {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        div.error {
+            color: red;
+        }
+
+        button {
+            font-size: 16px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+        .button-group {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .button-group button {
+            flex-basis: 48%;
+        }
+    </style>
 </head>
 <body>
 <h1>Log In</h1>
@@ -11,30 +63,27 @@
         <label for="username">Username: </label>
         <input type="text" id="username" name="username" required>
     </div>
-    <br/>
     <div>
         <label for="password">Password: </label>
         <input type="password" id="password" name="password" required>
     </div>
-    <div style="color:red" th:if="${param.error}">Invalid username or password</div>
-    <br/>
-    <div>
+    <div class="error" th:if="${param.error}">Invalid username or password</div>
+    <div class="button-group">
         <button type="submit">Login</button>
+        <button onclick="changePass()">Forgot password</button>
     </div>
 </form>
 
-<br/>
-<button onclick="changePass()">Forgot password</button>
-<br/>
-<br/>
-<button onclick="back()">Back</button>
+
+<!--<button onclick="back()">Back</button>-->
 <script>
     function changePass() {
         window.location.href = 'https://localhost:1000/get/send/code';
     }
-    function back() {
-        window.location.href = 'https://localhost:1000/';
-    }
+
+    // function back() {
+    //     window.location.href = 'https://localhost:1000/';
+    // }
 </script>
 </body>
 </html>
