--- a/src/main/resources/templates/authorization/register.html
+++ b/src/main/resources/templates/authorization/register.html
@@ -3,45 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
+    <style>
+        h1 {
+            font-size: 36px;
+            color: #333;
+            text-align: center;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        label {
+            font-weight: bold;
+            display: block;
+        }
+
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+
+        div.error {
+            color: brown;
+        }
+
+        button {
+            font-size: 16px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 <h1>Welcome to WebMarketplace</h1>
 <form th:method="POST" th:action="@{/add/user}" th:object="${user}">
-
-    <label for="fullName">Enter full name: </label>
+    <label for="fullName">Enter full name:</label>
     <input type="text" th:field="*{fullName}" id="fullName"/>
-    <div style="color: brown" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Error</div>
+    <div class="error" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}"></div>
 
-    <br/>
-    <br/>
-    <label for="email">Enter email: </label>
+    <label for="email">Enter email:</label>
     <input type="text" th:field="*{email}" id="email"/>
-    <div style="color: brown" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</div>
+    <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
 
-    <br/>
-    <br/>
-    <label for="password">Enter password: </label>
+    <label for="password">Enter password:</label>
     <input type="text" th:field="*{password}" id="password"/>
-    <div style="color: brown" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error</div>
+    <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
 
-    <br/>
-    <br/>
-    <label for="phone">Enter phone: </label>
+    <label for="phone">Enter phone:</label>
     <input type="text" th:field="*{phone}" id="phone"/>
-    <div style="color: brown" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">Error</div>
-    <div th:if="${error}" style="color:brown" th:text="${error}"></div>
+    <div class="error" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></div>
 
-    <br/>
-    <br/>
-    <input type="submit" value="Create!"/>
+    <div th:if="${error}" class="error" th:text="${error}"></div>
+
+    <input type="submit" value="Register"/>
 </form>
-<br/>
-<br/>
-<button onclick="back()">Back</button>
+
+<!--<button onclick="back()">Back</button>-->
+
 <script>
-    function back() {
-        window.location.href = 'https://localhost:1000/';
-    }
+    // function back() {
+    //     window.location.href = 'https://localhost:1000/';
+    // }
 </script>
 </body>
 </html>
