--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,39 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Account</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+            background-color: #f7f7f7;
+        }
+
+        h1 {
+            font-size: 36px;
+            color: #333;
+        }
+
+        button {
+            font-size: 16px;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 <h1>Web Marketplace</h1>
 
+<button onclick="yourAccount()">Account</button>
+<br/><br/>
+<button onclick="getUser()">Find Seller</button>
+<br/><br/>
+<button onclick="goods()">Goods</button>
+<br/><br/>
+<button onclick="logOut()">Log Out</button>
 
-
-<button onclick="yourAccount()">Your account</button>
-<br/>
-<br/>
-<button onclick="getUser()">Find seller</button>
-<br/>
-<br/>
-<button onclick="goods()">Find goods</button>
-<br/>
-<br/>
-<button onclick="logOut()">Log out</button>
 <script>
-    function logOut(){
+    function logOut() {
         window.location.href = 'https://localhost:1000/';
     }
 
     function getUser() {
         window.location.href = 'https://localhost:1000/get/user';
     }
+
     function goods() {
         window.location.href = 'https://localhost:1000/goods';
     }
+
     function yourAccount() {
         window.location.href = 'https://localhost:1000/get/account';
     }
-
-
 </script>
-
 </body>
 </html>
