Add setting account

--- a/src/main/resources/templates/account/yourAccount.html
+++ b/src/main/resources/templates/account/yourAccount.html
@@ -71,7 +71,7 @@
     }
 
     function accountSettings() {
-        // Add functionality for account settings here
+        window.location.href = 'https://localhost:1000/get/account/settings';
     }
 </script>
 </body>
