--- a/src/main/resources/templates/goods/buy/basket.html
+++ b/src/main/resources/templates/goods/buy/basket.html
@@ -145,7 +145,7 @@
 
 <script>
     function buy() {
-        window.location.href = 'https://localhost:1000/goods';
+        window.location.href = 'https://localhost:1000/get/order/menu';
     }
     function back() {
         window.location.href = 'https://localhost:1000/goods';
